--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,78 @@
 *{
     box-sizing: border-box;
 }
-
+body{
+    background-color: #212529;
+}
+/*-----------------HEADER---------------*/
 .header{
     width: 100%;
     height: 15rem;
-    background-color: red;
+    background: linear-gradient(to top, hsla(176, 74%, 64%, 0.304) 0%, #b490ca 100%), url('/img/img-header.jpg');
+    background-size: cover;
+    background-position-y: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
 }
+.header__title{
+    text-align: center;
+    font-size: 2.5rem;
+    color: #fff;
+    font-family: 'Fira Mono', monospace;
+    letter-spacing: -0.5rem;
+}
+.header__wave{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+/*-----------------END---------------*/
+/*-----------------NAV---------------*/
 .nav{
     width: 100%;
-    height: 2.5rem;
-    background-color: aqua;
+    height: 3rem;
+    display: flex;
+    justify-content: center;
 }
+.nav__label{
+    display: inherit;
+    cursor: pointer;
+}
+.nav__logo-menu{
+    width: 2.5rem;
+    height: 3rem;
+
+}
+.nav__links, .nav__input{
+    display: none;
+}
+.nav__input:checked + .nav__links{
+    display: inherit;
+    flex-wrap: wrap;
+}
+.nav__link{
+    display: inherit;
+    margin: 0 0.65rem;
+    text-decoration: none;
+    color: white;
+    text-transform: uppercase;
+    font-weight: 600;
+    transition: 1s;
+    align-items: center;
+}
+/*-----------------END---------------*/
 .main{
     width: 100%;
     background-color: blue;
+    height: 50rem;
+    display: flex;
+    flex-flow: column nowrap;
 }
 .footer{
     width: 100%;
     height: 6rem;
-    background-color: blueviolet;
 }
 
