--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body{
 .header{
     width: 100%;
     height: 15rem;
-    background: linear-gradient(to top, hsla(176, 74%, 64%, 0.304) 0%, #b490ca 100%), url('/img/img-header.jpg');
+    background: linear-gradient(to top, hsla(176, 74%, 64%, 0.304) 0%, #b490ca 100%), url('../img/img-header.jpg');
     background-size: cover;
     background-position-y: 50%;
     display: flex;
