--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body{
 .header{
     width: 100%;
     height: 15rem;
-    background: linear-gradient(to top, hsla(176, 74%, 64%, 0.304) 0%, #b490ca 100%), url('../img/img-header.jpg');
+    background: linear-gradient(to top, hsla(176, 74%, 64%, 0.304) 0%, #b490ca 100%), url('../img/img-header.jpg'); /*--img-header--*/
     background-size: cover;
     background-position-y: 50%;
     display: flex;
@@ -36,6 +36,7 @@ body{
     height: 3rem;
     display: flex;
     justify-content: center;
+    margin: 0.5rem 0 1rem 0;
 }
 .nav__label{
     display: inherit;
@@ -64,13 +65,74 @@ body{
     align-items: center;
 }
 /*-----------------END---------------*/
+/*-----------------MAIN---------------*/
 .main{
+    border-top: 1px solid rgba(255, 255, 255, 0.867);
     width: 100%;
-    background-color: blue;
     height: 50rem;
     display: flex;
     flex-flow: column nowrap;
+    align-items: center;
 }
+.card{
+    width: 90%;
+    display: inherit;
+    flex-direction: column;
+    border: 1px solid transparent;
+    background-color: #212529a6;
+    margin-top: 2rem;
+    align-items: center;
+    color: #fff;
+    border-radius: 5px;
+    background-color: rgba(50, 46, 46, 0.388);
+    padding: 1.5rem;
+    box-shadow: 6px 20px 5px rgb(0 0 0 / 20%);
+    font-family: 'Times New Roman', Times, serif;
+}
+.card__header{
+    position: relative;
+}
+.card__img{
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+}
+.card__fecha{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 2.5rem;
+    height: 3.5rem;
+    text-align: center;
+    line-height: 1.1rem;
+    background-image: linear-gradient(to right, #b8cbb8 0%, #b8cbb8 0%, #b465da 0%, #cf6cc9 33%, #ee609c 66%, #ee609c 100%);
+}
+.card__end{
+    text-align: center;
+}
+.card__title{
+    font-size: 1.5rem;
+    display: block;
+    margin: 0.5rem 0;
+    padding-bottom: 0.5rem ;
+    object-fit: cover;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.867);
+}
+.card__btn{
+    display: block;
+    background: #75F;
+    font-weight: bold;
+    min-width: 5rem;
+    color: #FFF;
+    transition: background 0.5s, color 0.5s, transform 0.5s;
+    margin: 2rem 3rem 1rem 3rem;
+    padding: 1rem 2.5rem;
+    border-radius: 3px;
+    box-shadow: 0px 2px 4px rgb(0 0 0 / 50%);
+    text-decoration: none;
+    box-shadow: 6px 20px 5px rgb(0 0 0 / 20%);
+}
+/*-----------------MAIN-END--------------*/
 .footer{
     width: 100%;
     height: 6rem;
