--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,6 @@ body{
 .main{
     border-top: 1px solid rgba(255, 255, 255, 0.867);
     width: 100%;
-    height: 50rem;
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
@@ -134,7 +133,26 @@ body{
 }
 /*-----------------MAIN-END--------------*/
 .footer{
+    margin-top: 3rem;
+    border-top: 1px solid rgba(255, 255, 255, 0.867);
     width: 100%;
-    height: 6rem;
+    height: 10rem;
+    display: flex;
+    flex-flow: column;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
 }
+.footer__row{
+    color: #FFF;
+    font-size: 1.2rem;
+}
+.footer__rede{
+    text-decoration: none;
+    margin: 0 1rem;
+}
+.footer__logo{
+    width: 2rem;
+}
+
 
