--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,7 @@ body{
     position: absolute;
     left: 0;
     top: 0;
+    z-index: 100;
     width: 2.5rem;
     height: 3.5rem;
     text-align: center;
