--- a/css/style.css
+++ b/css/style.css
@@ -200,6 +200,7 @@ body{
     font-weight: bold;
     font-size: 1rem;
     color: white;
+    border: transparent;
 }
 /*-----------------MAIN-END--------------*/
 /*-----------------FOOTER---------------*/
