--- a/css/style.css
+++ b/css/style.css
@@ -78,9 +78,6 @@ body{
     flex-flow: column nowrap;
     align-items: center;
 }
-.main--form{
-    display: flex;
-}
 /*-----------------MAIN-CARD-------------------------*/
 .card{
     width: 90%;
@@ -139,7 +136,6 @@ body{
     margin: 2rem 3rem 1rem 3rem;
     padding: 1rem 2.5rem;
     border-radius: 3px;
-    box-shadow: 0px 2px 4px rgb(0 0 0 / 50%);
     text-decoration: none;
     box-shadow: 6px 20px 5px rgb(0 0 0 / 20%);
 }
@@ -219,7 +215,21 @@ body{
 /*-----------------ASIDE-------------------------------*/
 .aside{
     flex: 100%;
+    margin-top: 2rem;
+    display: inherit;
+    flex-flow: row wrap;
     justify-content: center;
+}
+.aside__btn-publicity{
+    display: block;
+    margin:1rem;
+}
+.aside__publicity-img{
+    width: 90%;
+    border-radius: 10px;
+    box-shadow: 6px 20px 5px rgb(0 0 0 / 20%);
+    width: 10rem;
+    height: 15rem;
 }
 /*-----------------ASIDE-END------------------------------*/
 /*-----------------FOOTER---------------*/
@@ -261,11 +271,13 @@ body{
         margin-top:0;
         margin: 1rem;
     }
-    .card--aside{
-        flex: 100%;
-        height: 100vh;
-    }
     /*-----------------CARD--END---------------*/
+    /*-----------------ASIDE----------------*/
+    .aside__publicity-img{
+        width: 15rem;
+        height: 15rem;
+    }
+    /*-----------------ASIDE--END---------------*/
 }
 @media screen and (min-width: 1024px){
     /*-----------------NAV-MOBILE-----------------*/
@@ -286,7 +298,7 @@ body{
     .main{
         flex-flow: column;
         align-items: center;
-        flex: 60%;
+        flex: 50%;
     }
     .main:nth-child(1){
         order: 2;
@@ -296,6 +308,9 @@ body{
         flex-direction: row;
     }
     .card--form{
+        flex-direction: column;
+    }
+    .card--aside{
         flex-direction: column;
     }
     .card__header{
@@ -317,14 +332,23 @@ body{
     }
     /*-----------------ASIDE-----------------*/
     .aside{
-        flex:20%;
+        flex:10%;
         justify-content: normal;
+        margin: 1rem;
     }
     .aside--row1:nth-child(2){
         order: 1;
+        flex-direction: column;
     }
     .aside--row2:nth-child(3){
         order: 3;
+    }
+    .aside{
+        margin: 0;
+    }
+    .aside__publicity-img{
+        width: 100%;
+        height: 100%;
     }
     /*-----------------ASIDE--END---------------*/
     /*-----------------CARD-END--------------*/
